--- a/main.html
+++ b/main.html
@@ -7,7 +7,22 @@
     <title>I'm not a robot</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body>
+  <body>const players = ["John", "Bob", "Alice", "Poppy"];
+ 
+const person = {
+  name: "John Doe",
+  age: 80,
+};
+ 
+// Write your code here, make sure the name of variables is exactly same as mentioned in the problem statement
+var team= players;
+var team1 =players.slice();
+var cap1 = Object.assign({}, person);
+window.players = players;
+window.person = person;
+window.team = team;
+window.team1 = team1;
+window.cap1 = cap1;
     <!-- the entire body must be written by student -->
     <script src="./script.js"></script>
   </body>
